@@ -8,7 +8,7 @@
 <LINK REL=stylesheet HREF="styles.css" TYPE="text/css">
 <CENTER>
 <A HREF="index.html"><IMG SRC="iTerm.png" TITLE="" ALT="iTerm" BORDER="0"></A>
-<H1><A HREF="index.html">iTerm Project Homepage</A></H1>
+<H1>iTerm Project Homepage</H1>
 
 <TABLE BGCOLOR="#000000" CELLPADDING="10" CELLSPACING="1" BORDER="0" WIDTH="100%">
 <TR>
@@ -43,6 +43,21 @@
 <TD VALIGN="TOP" BGCOLOR="#FFFFFF">
 <FONT SIZE="5"><STRONG>Version History:</STRONG></FONT>
 <BR><BR>
+<STRONG>>0.6.2</STRONG> 1/21/2002<BR>
+<UL>
+<LI>X Window-like copy-on-selection</LI>
+<LI>New option to enable/disable double-width characters</LI>
+<LI>Graphical characters now works for VT100 font</LI>
+<LI>Better support for bold attributes</LI>
+<LI>Toolbar now fuuly works in text only mode</LI>
+<LI>Added support to specify text highlight/selection color</LI>
+<LI>Save session configuration</LI>
+<LI>Added option to silence terminal bell.</LI>
+<LI>Hide-Tab when there's only one is now an option</LI>
+<LI>Sorted Address book(patched by Aaron D. Gerber)</LI>
+<LI>Numerous bug fixes and other minor interface changes</LI>
+</UL>
+
 <STRONG>>0.6.1</STRONG> 1/9/2002<BR>
 <UL>
 <LI>Help now made available by Aaron D.Gerber! Many thanks</LI>
