@@ -10,7 +10,7 @@
 <LINK REL=stylesheet HREF="styles.css" TYPE="text/css">
 <CENTER>
 <A HREF="index.html"><IMG SRC="iTerm.png" TITLE="" ALT="iTerm" BORDER="0"></A>
-<H1><A HREF="index.html">iTerm Project Homepage</A></H1>
+<H1>iTerm Project Homepage</H1>
 
 <TABLE BGCOLOR="#000000" CELLPADDING="10" CELLSPACING="1" BORDER="0" WIDTH="100%">
 <TR>
